# SoftRender

./: .gitignore  CMakeLists.txt  Question.md  README.MD  main.cpp
Config/: MainConfig.cpp  MainConfig.h
core/: Camera.cpp  Camera.h  FrameImage.cpp  FrameImage.h  Global.h  ObjLoader.cpp  ObjLoader.h  Rasterizer.cpp  Rasterizer.h  RenderUtil.cpp  RenderUtil.h  Shader.cpp  Shader.h  ShadowMapping.cpp  ShadowMapping.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
math/: MathUtil.cpp  MathUtil.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
softRender/math/: MathUtil.cpp  MathUtil.h  Matrix.h  Vector.cpp  Vector.h
softRender/model/: Camera.cpp  Camera.h  FrameImage.cpp  FrameImage.h  GeometryGenerator.cpp  GeometryGenerator.h  Model.cpp  ModelDraw.cpp  ModelDraw.h  ShaderBase.h  ShaderModel.cpp  ShaderModel.h  Vertex.h  model.h  modelData.h
